test: add assertions for total year income and expenses in summary tests